# srtd-maze

./: .gitignore  README.md  pyproject.toml  running_notes.md
assets/: maze2d_default.yaml
references/: ambient_maze_srtd_implementation_spec.txt  trajectory_diffusion_spectral_skill_autoregression.txt
reports/: maze2d_audit3seed_aggregate.csv  maze2d_audit3seed_filtered_padded_metrics.csv  maze2d_audit3seed_fixedcadence_aggregate.csv  maze2d_audit3seed_fixedcadence_filtered_padded_metrics.csv  maze2d_audit3seed_fixedcadence_filtered_padded_paired_stats.csv  maze2d_audit3seed_fixedcadence_raw_padded_metrics.csv  maze2d_audit3seed_fixedcadence_raw_padded_paired_stats.csv  maze2d_audit3seed_fixedcadence_summary.md  maze2d_audit3seed_raw_padded_metrics.csv  maze2d_audit3seed_summary.md  maze2d_seed0_data_diagnostics.json  maze2d_seed0_metrics.csv  maze2d_seed0_summary.md
srtd/: __init__.py  config.py
srtd/configs/: maze2d_ambient_sampler_x0_mse.yaml  maze2d_ambient_scalar.yaml  maze2d_ambient_scalar_ambient_loss.yaml  maze2d_audit_ambient_loss_tmin18_buffer10.yaml  maze2d_audit_ambient_loss_tmin18_buffer100.yaml  maze2d_audit_ambient_loss_tmin18_buffer1000.yaml  maze2d_audit_ambient_loss_tmin18_bufferinf.yaml  maze2d_audit_ambient_loss_tmin30_buffer10.yaml  maze2d_audit_ambient_loss_tmin30_buffer100.yaml  maze2d_audit_base.yaml  (+27 more)
tests/: test_bundle.py  test_config.py  test_ddim.py  test_diagnostics.py  test_fft_ops.py  test_losses.py  test_metrics.py  test_report.py  test_residual_saliency.py  test_rollout.py  test_sampler.py  test_schedule.py  test_snr_monotonic.py
(+29 files in other folders)
