[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srtd-maze"
version = "0.1.0"
description = "Spectral Residual Trajectory Diffusion prototype on a 2D maze task"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "PyYAML",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["srtd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

